# bazel2

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod
cloud/agent/cmd/: BUILD.bazel
cloud/agent/pkg/proto/: BUILD.bazel  helloworld.proto
cloud/apigw/cmd/: BUILD.bazel
hack/: BUILD.bazel
