load("//build:utils.bzl", "go_prefix")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all-protos",
    srcs = [
        "//cloud/agent/pkg/proto:proto",
    ],
)


genrule(
    name = "genproto",
    srcs = [":all-protos"],
    outs = ["proto-outs"],
    cmd = """for p in $(locations :all-protos)
do
    mkdir -p $@/github.com/zhaoxuat/bazel2/ && \
    rp=$$(realpath $$p) && \
    cp -rf $${rp%.a}_/* $@/
done""",
)

sh_binary(
    name = "update-proto",
    srcs = ["update-proto.sh"],
    args = [
        "$(execpaths proto-outs)",
        go_prefix,
    ],
    data = ["proto-outs"],
)